# bkfc-graphrag

./: _csv_to_graph.py  jsonToDB.py  main.py  pyproject.toml  tree.txt
backend/core/: embedding_engine.py  llm_engine.py  rag_chain.py
backend/utils/: self_destruct.py  sync_data.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  ui_controls.js
